--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,34 @@
   padding: 0;
   box-sizing: border-box;
 }
+.App {
+  min-height: 100vh;
+  background-color: rgb(219, 219, 219);
+  display: flex;
+  justify-content: center;
+}
+.form-main {
+  display: flex;
+  flex-direction: column;
+  margin: 3rem;
+  background-color: white;
+  align-items: center;
+  width: 60%;
+}
+.form-main > h1 {
+  margin: 1rem;
+}
+.input-form {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-around;
+}
+button {
+  height: 8vh;
+  background-color: black;
+  color: white;
+  font-weight: 900;
+  /* padding: 1rem; */
+  font-size: 2rem;
+}
